--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,21 @@
+spring.jpa.show_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 
+# H2 Setting
+# spring.datasource.url=jdbc:h2:~/test;AUTO_SERVER=TRUE
+# jdbc:h2:mem:testdb <- ??? DB ???   http://localhost:8080/h2-console
+# spring.h2.console.path=/console
+# h2-console
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+
+# ???? ???? ?? ??
+#
+#server.servlet.encoding.force-response: true
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.force=true
